# B-CPP-500-MAR-5-2-rtype-jeremy.bisson

./: CMakeLists.txt  Doxyfile  LICENSE.MD  README.md  conanfile.py  conanfile.txt  config.json  mkdocs.yml
.github/workflows/: cmake.yml  compil.yml  discord-notification.yml  doxygen.yml
doc/: client.md  installation.md  server.md
docs/: Accessibility.md  Architecture.md  ArchitectureChoice.md  NetworkChoice.md  TechnicalComparative.md  client.md  index.md  installation.md  mainpage.dox  rfc.txt  server.md
docs/html/: _architecture_8dox.html  _architecture_8hpp.html  _architecture_8hpp_source.html  _components_8hpp.html  _components_8hpp.js  _components_8hpp__dep__incl.map  _components_8hpp__dep__incl.md5  _components_8hpp__incl.map  _components_8hpp__incl.md5  _components_8hpp_source.html  _core_8cpp.html  _core_8cpp__incl.map  _core_8cpp__incl.md5  _core_8hpp.html  _core_8hpp.js  _core_8hpp__dep__incl.map  _core_8hpp__dep__incl.md5  _core_8hpp__incl.map  _core_8hpp__incl.md5  _core_8hpp_source.html  _entity_8hpp.html  _entity_8hpp__dep__incl.map  _entity_8hpp__dep__incl.md5  _entity_8hpp__incl.map  _entity_8hpp__incl.md5  _entity_8hpp_source.html  _gui_game_8cpp.html  _gui_game_8cpp__incl.map  _gui_game_8cpp__incl.md5  _gui_lobby_8cpp.html  _gui_lobby_8cpp__incl.map  _gui_lobby_8cpp__incl.md5  _gui_login_8cpp.html  _gui_login_8cpp.js  _gui_login_8cpp__incl.map  _gui_login_8cpp__incl.md5  _gui_login_8cpp_ae95961aca671fc82f88a3c5c39462a8e_icgraph.map  _gui_login_8cpp_ae95961aca671fc82f88a3c5c39462a8e_icgraph.md5  (+764 more)
src/: Components.hpp  Entity.hpp  Menu.cpp  Menu_Login.cpp  Registry.hpp  SparseArray.hpp  Systems.cpp  Systems.hpp  Utils.hpp  main.cpp
tests/: test_server.sh
(+182 files in other folders)
